@@ -4,17 +4,20 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.atomic.AtomicInteger;
+
 import javax.imageio.ImageIO;
+
+import org.apache.commons.io.FileUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.texture.SimpleTexture;
 import net.minecraft.client.renderer.texture.TextureUtil;
 import net.minecraft.client.resources.IResourceManager;
 import net.minecraft.util.ResourceLocation;
-import org.apache.commons.io.FileUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 
 public class ThreadDownloadImageData extends SimpleTexture {
 	private static final Logger logger = LogManager.getLogger();
@@ -93,7 +96,7 @@ public class ThreadDownloadImageData extends SimpleTexture {
 						ThreadDownloadImageData.this.imageUrl, ThreadDownloadImageData.this.cacheFile);
 
 				try {
-					httpurlconnection = (HttpURLConnection) (new URL(ThreadDownloadImageData.this.imageUrl))
+					httpurlconnection = (HttpURLConnection) (new URI(ThreadDownloadImageData.this.imageUrl)).toURL()
 							.openConnection(Minecraft.getMinecraft().getProxy());
 					httpurlconnection.setDoInput(true);
 					httpurlconnection.setDoOutput(false);
