@@ -51,7 +51,7 @@ public class EntityBoat extends Entity {
 	protected void entityInit() {
 		this.dataWatcher.addObject(17, Integer.valueOf(0));
 		this.dataWatcher.addObject(18, Integer.valueOf(1));
-		this.dataWatcher.addObject(19, new Float(0.0F));
+		this.dataWatcher.addObject(19, Float.valueOf(0.0F));
 	}
 
 	/**
