@@ -94,7 +94,7 @@ public abstract class EntityMinecart extends Entity implements IWorldNameable {
 	protected void entityInit() {
 		this.dataWatcher.addObject(17, Integer.valueOf(0));
 		this.dataWatcher.addObject(18, Integer.valueOf(1));
-		this.dataWatcher.addObject(19, new Float(0.0F));
+		this.dataWatcher.addObject(19, Float.valueOf(0.0F));
 		this.dataWatcher.addObject(20, Integer.valueOf(0));
 		this.dataWatcher.addObject(21, Integer.valueOf(6));
 		this.dataWatcher.addObject(22, Byte.valueOf((byte) 0));
